// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: ClusterSelectionFields should match snapshot with appco variant 1`] = `
<div
  class="appco-select-clusters"
>
  <!-- Select by cluster name -->
  <!-- The underlying select doesn't preventDefault on Enter, so inside a &lt;form&gt; it would trigger an
         implicit submit (firing the first button, e.g. "Add cluster selector"). Catch Enter in the
         capture phase - before the select stops propagation - and prevent that default submit. -->
  <div>
    <h4>
      fleet.clusterTargets.clusters.byName.title
    </h4>
    <resource-labeled-select-stub
      allresourcessettings="[object Object]"
      class=""
      close-on-select="false"
      data-testid="fleet-target-cluster-name-selector"
      instore="management"
      label="fleet.clusterTargets.clusters.byName.label"
      mode="edit"
      multiple="true"
      paginatedresourcesettings="[object Object]"
      paginatemode="DYNAMIC"
      placeholder="fleet.clusterTargets.clusters.byName.placeholder"
      resourcetype="fleet.cattle.io.cluster"
      taggable="false"
      value="cluster-1"
    />
  </div>
  <!-- Select by labels -->
  <div
    class=""
  >
    <h4
      class=""
    >
      fleet.clusterTargets.clusters.byLabel.title
    </h4>
    
    
    <rc-button-stub
      class="mmt-3"
      ghost="false"
      link="false"
      multiaction="false"
      primary="false"
      secondary="false"
      size="small"
      small="false"
      tertiary="false"
      variant="secondary"
    />
  </div>
  <!-- Select by cluster groups -->
  <div
    class=""
  >
    <h4
      class=""
    >
      fleet.clusterTargets.clusterGroups.title
    </h4>
    <labeled-select-stub
      appendtobody="true"
      class=""
      clearable="false"
      closeonselect="false"
      data-testid="fleet-target-cluster-group-selector"
      disabled="false"
      filterable="true"
      hovertooltip="true"
      instore="cluster"
      label="fleet.clusterTargets.clusterGroups.byName.label"
      loading="false"
      localizedlabel="false"
      lockedoptions=""
      mode="edit"
      multiple="true"
      nooptionslabelkey="labelSelect.noOptions.empty"
      optionlabel="label"
      options=""
      placeholder="fleet.clusterTargets.clusterGroups.byName.placeholder"
      reduce="[Function]"
      required="false"
      requiredirty="true"
      rules=""
      searchable="false"
      selectable="[Function]"
      taggable="true"
      value=""
    />
  </div>
</div>
`;

exports[`component: ClusterSelectionFields should match snapshot with default variant 1`] = `
<div
  class=""
>
  <!-- Select by cluster name -->
  <!-- The underlying select doesn't preventDefault on Enter, so inside a &lt;form&gt; it would trigger an
         implicit submit (firing the first button, e.g. "Add cluster selector"). Catch Enter in the
         capture phase - before the select stops propagation - and prevent that default submit. -->
  <div>
    <!--v-if-->
    <resource-labeled-select-stub
      allresourcessettings="[object Object]"
      class="mmt-4"
      close-on-select="false"
      data-testid="fleet-target-cluster-name-selector"
      instore="management"
      label="fleet.clusterTargets.clusters.byName.label"
      mode="edit"
      multiple="true"
      paginatedresourcesettings="[object Object]"
      paginatemode="DYNAMIC"
      placeholder="fleet.clusterTargets.clusters.byName.placeholder"
      resourcetype="fleet.cattle.io.cluster"
      taggable="false"
      value="cluster-1"
    />
  </div>
  <!-- Select by labels -->
  <div
    class="mmt-6"
  >
    <h4
      class="m-0"
    >
      fleet.clusterTargets.clusters.byLabel.title
    </h4>
    
    
    <rc-button-stub
      class="mmt-4"
      ghost="false"
      link="false"
      multiaction="false"
      primary="false"
      secondary="false"
      size="small"
      small="false"
      tertiary="false"
      variant="secondary"
    />
  </div>
  <!-- Select by cluster groups -->
  <div
    class="mmt-8"
  >
    <h3
      class="m-0"
    >
      fleet.clusterTargets.clusterGroups.title
    </h3>
    <labeled-select-stub
      appendtobody="true"
      class="mmt-4"
      clearable="false"
      closeonselect="false"
      data-testid="fleet-target-cluster-group-selector"
      disabled="false"
      filterable="true"
      hovertooltip="true"
      instore="cluster"
      label="fleet.clusterTargets.clusterGroups.byName.label"
      loading="false"
      localizedlabel="false"
      lockedoptions=""
      mode="edit"
      multiple="true"
      nooptionslabelkey="labelSelect.noOptions.empty"
      optionlabel="label"
      options=""
      placeholder="fleet.clusterTargets.clusterGroups.byName.placeholder"
      reduce="[Function]"
      required="false"
      requiredirty="true"
      rules=""
      searchable="false"
      selectable="[Function]"
      taggable="true"
      value=""
    />
  </div>
</div>
`;
